# rag-templates

./: .env.example  README.md  TUTORIAL_SUMMARY.md  docker-compose.yml  graphrag_chatbot.py  pyproject.toml  requirements.txt
data/: symptoms.yaml
notebooks/: embedding_setup.ipynb  graphrag_tutorial.ipynb  knowledge_graph_building.ipynb
src/: graph_builder.py  rag_chains.py  utils.py
