[project]
name = "graphrag-chatbot"
version = "0.1.0"
description = "GraphRAG Chatbot implementation using SurrealDB and LangChain"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
    { name = "GraphRAG Developer", email = "developer@example.com" }
]
keywords = [
    "graphrag",
    "surrealdb", 
    "langchain",
    "chatbot",
    "rag",
    "vector-search",
    "knowledge-graph"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    # Core SurrealDB
    "surrealdb>=0.3.0",
    
    # LangChain core and community packages (compatible versions)
    "langchain>=0.3.0",
    "langchain-core>=0.3.0", 
    "langchain-community>=0.3.0",
    "langchain-experimental>=0.3.0",
    
    # OpenAI integration
    "langchain-openai>=0.2.0",
    "openai>=1.0.0",
    
    # Ollama for local LLMs
    "ollama>=0.1.0",
    
    # Vector embeddings and ML
    "sentence-transformers>=2.2.0",
    "numpy>=1.21.0",
    "scipy>=1.7.0",
    
    # Data processing
    "pydantic>=2.0.0",
    "pyyaml>=6.0",
    "click>=8.0.0",
    
    # Async support
    "aiofiles>=23.0.0",
    
    # Development and debugging
    "python-dotenv>=1.0.0",
    "rich>=13.0.0",
    "tqdm>=4.65.0",
]

[project.optional-dependencies]
# Development dependencies
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
    "pre-commit>=3.0.0",
]

# Enhanced ML features
ml = [
    "scikit-learn>=1.3.0",
    "matplotlib>=3.6.0",
    "pandas>=1.5.0",
    "transformers>=4.20.0",
    "torch>=2.0.0",
    "jupyter>=1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.black]
line-length = 88
target-version = ['py39', 'py310', 'py311', 'py312', 'py313']

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false

[[tool.mypy.overrides]]
module = [
    "surrealdb.*",
    "langchain.*",
    "langchain_community.*",
    "langchain_experimental.*",
    "langchain_openai.*",
    "ollama.*",
]
ignore_missing_imports = true
